create seller & product Repo and Service & handle some custom exception